# vertex-ai-api-wrapper

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  vertex.py
Docs/: openai-drop-in-implementation.md
tests/: test_wrapper.py
