[project]
name = "vertex-ai-api-wrapper"
version = "0.1.0"
description = "OpenAI-compatible embedding proxy for Google Cloud Vertex AI (RAGFlow 0.25.6 integration)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "google-auth>=2.40.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "openai>=2.41.0",
    "pytest>=9.0.3",
]
